test/integration/bad/tuples/bad_unpack2.stan
transformed data {
  int x = 3;
  real y = 4.0;
  (x, y).1 = 2; // allowing this feels very silly and would complicate implementation
}
